--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  background: #ededed;
+  overflow: hidden;
+
+}
+
+.mainMenuBar {
+  min-width: 800px;
+  width: 70%;
+  height: 100%;
+  margin: auto;
+  overflow: hidden;
 }
