--- a/src/Components/DisplayBox/Style/CSS/DisplayBoxDescription.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayBoxDescription.css
@@ -1,20 +1,13 @@
 .DisplayBoxDescription {
-  min-width: 700px;
+  max-width: 78em;
   display: block;
   background: #d1d1d1;
-  margin-top: 10px;
+  margin-top: .625em;
   overflow: hidden;
-
-}
-
-.Collapsed{
-  height: 300px;
-}
-
-.Expanded{
-  min-height: 300px;
+  min-height: calc(35% - .125em);
 }
 
 .description {
-  padding: 10px;
+  padding: .625em;
+
 }
