--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   background: #ededed;
   overflow: hidden;
 
