--- a/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuBar.css
+++ b/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuBar.css
@@ -5,7 +5,8 @@
   background: #14a5ff;
   font-family: Lucida Console;
   overflow: hidden;
-  border-bottom: solid 2px white;
+  border-bottom: solid .125em white;
+
 }
 
 .MenuBar ul {
