--- a/src/Components/Buttons/Expand/Style/CSS/Expand.css
+++ b/src/Components/Buttons/Expand/Style/CSS/Expand.css
@@ -5,6 +5,7 @@
   width: 100%;
   position: absolute;
   bottom: 0;
+  border-radius: 0.625em 0.625em 0 0;
   text-align: center;
   color: white;
 }
