--- a/src/Components/MainDisplay/Style/CSS/MainDisplay.css
+++ b/src/Components/MainDisplay/Style/CSS/MainDisplay.css
@@ -3,6 +3,7 @@
   min-width: 22.5em;
   height: calc(100% - 4em);
   border: solid .125em white;
+  border-radius: 0.625em;
   margin: .375em auto 0em;
   overflow: hidden;
 }
