--- a/src/Components/Buttons/ImageToggle/Style/CSS/ImageToggle.css
+++ b/src/Components/Buttons/ImageToggle/Style/CSS/ImageToggle.css
@@ -1,4 +1,4 @@
-.Close{
+.ImageToggle {
   height: 2.5em;
   width: 2.5em;
   float: right;
@@ -6,10 +6,15 @@
   color: rgba(255, 255, 255, 0.5);
   border: solid 0.0625em rgba(255, 255, 255, 0.5);
   border-radius: 0.625em;
-  display: block;
+  background: rgba(0, 0, 0, 0.25);
+  float: right;
 }
 
-.Close:before {
-    content: "×";
-    font-size: 30px;
+.ToggleLeft :before{
+  content: "<"
+}
+
+
+.ToggleRight :before{
+  content: ">";
 }
