--- a/src/Components/ImageCycler/Style/CSS/ImageCycler.css
+++ b/src/Components/ImageCycler/Style/CSS/ImageCycler.css
@@ -1,4 +1,4 @@
-.ImageDisplay{
+.ImageCycler{
     max-width: 100%;
     max-height: 100%;
     position: fixed;
@@ -9,12 +9,13 @@
     left: 0;
     padding: 40px 20px;
     background-color: rgba(0, 0, 0, 0.8);
+    overflow: auto;
   }
 
 .HeaderBar {
   height: 40px;
   border-bottom: solid 0.0625em rgba(255, 255, 255, 0.25);
-  padding-bottom: 10px;
+  padding: 5px 5px 10px;
   margin-bottom: 10px;
 }
 
@@ -23,7 +24,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   border: solid 0.0625em rgba(255, 255, 255, 0.25);
   border-radius: 0.625em;
-  padding-bottom: 40px;
+  padding-bottom: 45px;
 }
 
 .ImageHolder {
@@ -34,7 +35,8 @@
   display: block;
 }
 
-.ImageDisplay img {
+.ImageCycler img {
+    border: solid 0.0625em rgba(255, 255, 255, 0.25);
     border-radius: 0.625em;
     max-width: 100%;
     max-height: 100%;
