--- a/src/Components/ImageCycler/Style/CSS/ImageCycler.css
+++ b/src/Components/ImageCycler/Style/CSS/ImageCycler.css
@@ -7,16 +7,16 @@
     bottom:0;
     right: 0;
     left: 0;
-    padding: 40px 20px;
+    padding: 2.5em 1.25em;
     background-color: rgba(0, 0, 0, 0.8);
     overflow: auto;
   }
 
-.HeaderBar {
-  height: 40px;
+.ImageCycler .HeaderBar {
+  height: 2.5em;
   border-bottom: solid 0.0625em rgba(255, 255, 255, 0.25);
-  padding: 5px 5px 10px;
-  margin-bottom: 10px;
+  padding: 0.3125em 0.3125em 0.625em;
+  margin-bottom: 0.625em;
 }
 
 .ImageBackDrop{
@@ -24,7 +24,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   border: solid 0.0625em rgba(255, 255, 255, 0.25);
   border-radius: 0.625em;
-  padding-bottom: 45px;
+  padding-bottom: 2.8125em;
+  box-shadow: 0.3125em 0.3125em 0.3125em black;
 }
 
 .ImageHolder {
@@ -38,6 +39,7 @@
 .ImageCycler img {
     border: solid 0.0625em rgba(255, 255, 255, 0.25);
     border-radius: 0.625em;
+    box-shadow: 0.3125em 0.3125em 0.3125em black;
     max-width: 100%;
     max-height: 100%;
   }
