--- a/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
@@ -2,4 +2,7 @@
   overflow: hidden;
   display: block;
   margin-left: .625em;
+  color: white;
+  text-shadow: 0.0625em 0.0625em 0.125em Black, 0 0 0.125em black, 0.3125em 0.3125em 0.3125em grey;
+
 }
