--- a/src/Components/DisplayBox/Style/CSS/DisplayImage.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayImage.css
@@ -6,6 +6,7 @@
   display: block;
   margin-top: 10px;
   overflow: hidden;
+  box-shadow: 0.3125em 0.3125em 0.3125em grey;
 }
 
 .DisplayButtonsContainer{
