--- a/src/Components/MainDisplay/Style/CSS/MainDisplay.css
+++ b/src/Components/MainDisplay/Style/CSS/MainDisplay.css
@@ -6,6 +6,7 @@
   border-radius: 0.625em;
   margin: .375em auto 0em;
   overflow: hidden;
+  box-shadow: 0.3125em 0.3125em 0.3125em grey;
 }
 
 .MainContents{
