--- a/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuTitle.css
+++ b/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuTitle.css
@@ -6,4 +6,6 @@
   display: block;
   text-align: center;
   padding-top: 10px;
+  color: white;
+  text-shadow: .5px .5px 2px Black, 0.3125em 0.3125em 0.3125em grey;
 }
