--- a/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
@@ -1,8 +1,11 @@
 .DisplayBoxTitle {
   overflow: hidden;
   display: block;
-  margin-left: .625em;
   color: white;
   text-shadow: 0.0625em 0.0625em 0.125em Black, 0 0 0.125em black, 0.3125em 0.3125em 0.3125em grey;
-
+  padding: .625em;
+  border-radius: 0.625em;
+  box-shadow: 0.3125em 0.3125em 0.3125em grey;
+  background: #d1d1d1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
