--- a/src/Components/Buttons/Close/Style/CSS/Close.css
+++ b/src/Components/Buttons/Close/Style/CSS/Close.css
@@ -4,7 +4,7 @@
   float: right;
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
-  border: solid 0.0625em rgba(255, 255, 255, 0.5);
+  border: groove 0.0625em rgba(255, 255, 255, 0.5);
   border-radius: 0.625em;
   box-shadow: 0.3125em 0.3125em 0.3125em black;
   display: block;
