--- a/src/Components/Buttons/Expand/Style/CSS/Expand.css
+++ b/src/Components/Buttons/Expand/Style/CSS/Expand.css
@@ -5,7 +5,7 @@
   position: absolute;
   bottom: 0;
   border-radius: 0.625em 0.625em 0em 0em;
-  border: 1px solid rgba(255, 255, 255, .5);
+  border: 1px groove rgba(255, 255, 255, .5);
   text-align: center;
   color: white;
 }
