--- a/src/Components/Buttons/ImageToggle/Style/CSS/ImageToggle.css
+++ b/src/Components/Buttons/ImageToggle/Style/CSS/ImageToggle.css
@@ -4,7 +4,7 @@
   float: right;
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
-  border: solid 0.0625em rgba(255, 255, 255, 0.5);
+  border: groove 0.0625em rgba(255, 255, 255, 0.5);
   border-radius: 0.625em;
   background: rgba(0, 0, 0, 0.25);
   box-shadow: 0.3125em 0.3125em 0.3125em black;
