--- a/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayBoxTitle.css
@@ -3,9 +3,9 @@
   display: block;
   color: white;
   text-shadow: 0.0625em 0.0625em 0.125em Black, 0 0 0.125em black, 0.3125em 0.3125em 0.3125em grey;
-  padding: .625em;
+  padding: 0.3125em;
   border-radius: 0.625em;
   box-shadow: 0.3125em 0.3125em 0.3125em grey;
-  background: #d1d1d1;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: #c1c1c1;
+  border: 1px ridge rgba(255, 255, 255, 0.75);
 }
