--- a/src/Components/DisplayBox/Style/CSS/DisplayImage.css
+++ b/src/Components/DisplayBox/Style/CSS/DisplayImage.css
@@ -7,7 +7,7 @@
   margin-top: 10px;
   overflow: hidden;
   box-shadow: 0.3125em 0.3125em 0.3125em grey;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: 1px ridge rgba(255, 255, 255, 0.5);
 }
 
 .DisplayButtonsContainer{
