--- a/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuTitle.css
+++ b/src/Components/Menus/GenericMenuComponents/Style/CSS/MenuTitle.css
@@ -1,11 +1,9 @@
 .MenuTitle {
   height: 100%;
-  width: 100px;
   overflow: hidden;
   float: left;
   display: block;
   text-align: center;
-  padding-top: 10px;
+  padding: 0.625em 0.625em 0em;
   color: white;
-  text-shadow: .5px .5px 2px Black, 0.3125em 0.3125em 0.3125em grey;
 }
