fixed some css stuff, integrated react router

--- a/src/Components/ImageCycler/Style/CSS/ImageCycler.css
+++ b/src/Components/ImageCycler/Style/CSS/ImageCycler.css
@@ -9,7 +9,7 @@
     left: 0;
     padding: 2.5em 1.25em;
     background-color: rgba(0, 0, 0, 0.8);
-    overflow: auto;
+    overflow: hidden;
   }
 
 .ImageCycler .HeaderBar {
