--- a/src/Components/MainDisplay/Style/CSS/MainDisplay.css
+++ b/src/Components/MainDisplay/Style/CSS/MainDisplay.css
@@ -1,6 +1,7 @@
 .MainDisplay{
   width: 65%;
   min-width: 22.5em;
+  max-width: 62.5em;
   height: calc(100% - 4em);
   border: ridge .125em white;
   border-radius: 0.625em;
